--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,3 +20,5 @@
 @import 'blocks/promo';
 @import 'blocks/buttons';
 @import 'blocks/header';
+@import 'blocks/about';
+@import 'blocks/advantages';
