--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,8 +12,10 @@
 }
 
 .container{
+    
     width: 1290px;
     margin: 0 auto;
+    position: relative;
 
 }
 
@@ -22,3 +24,5 @@
 @import 'blocks/header';
 @import 'blocks/about';
 @import 'blocks/advantages';
+@import 'blocks/cfo';
+@import 'blocks/footer';
