absolute pic fix and adapt
Fixed abs pos of pic X and computer. Translate text in section cfo. Full adopted for 1200, 992px

--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -7,8 +7,9 @@
 
     &__img{
         position: absolute;
-        left: 1157px;
-        top: -87px;
+        
+        right: 0;
+        bottom: 0;
         
     }
     &__wrapper{
