--- a/src/sass/blocks/_cfo.scss
+++ b/src/sass/blocks/_cfo.scss
@@ -1,14 +1,20 @@
 .cfo{
+    position: relative;
     height: 950px;
     padding: 119px 0;
     background-color: $section-color;
+
     &__img{
+        height: 950px;
         position: absolute;
-        left: 818px;
-        top: -119px;
+        right: 0;
+        bottom: 0;
         
 
         
+    }
+    &__info{
+        transform: translateX(-115px);
     }
 
     &__title{
@@ -24,6 +30,7 @@
     &__descr{
         
         width: 732px;
+        
         margin-top: 40px;
         font-family: 'Roboto';
         font-style: normal;
@@ -31,6 +38,7 @@
         font-size: 24px;
         line-height: 48px;              
         color: #FFFFFF;
+        
         
     }
 }
