--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,5 +1,5 @@
 .promo{
-    min-height: 100vh;
+    min-height: 1080px;
     padding-top: 40px;
     background: url('../img/main_bg.jpg') center center/cover no-repeat ;
     &__info{
