--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     &__logo{
+        display: block;
         width: 235px;
         img{
             width: 100%;
