--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,3 +1,24 @@
+@media (max-width: 1600px){
+    
+    .cfo{
+        &__info{
+            transform: none;
+        }
+    }
+}
+@media (max-width: 1400px){
+    .container{
+        max-width: 1140px;
+    }
+    .advantages {
+        &__item{
+            width: 350px;
+        }
+        
+        
+    }
+    
+}
 @media (max-width: 1200px){
     .container{
         max-width: 960px;
@@ -36,11 +57,12 @@
         
     }
     .cfo{
-        &__info{
-            transform: none;
-        }
+        
         &__descr{
             width: 900px;
+        }
+        &__img{
+            width: 100%;
         }
     }
 }
@@ -77,9 +99,7 @@
             text-align: center;
         }
 
-        &__img{
-            width: 100%;
-        }
+        
     }
     .promo{
         min-height: 950px;
@@ -96,12 +116,167 @@
     .container{
         max-width: 540px;
     }
-    
+    .header {
+        
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        &__links{
+            margin-top: 25px;
+        }
+    }
+    .promo{
+        min-height: 830px;
+        &__info{
+            margin-top: 180px;
+        }
+        &__title{
+            font-size: 35px;
+        }
+        &__subtitle{
+            font-size: 35px;
+        }
+    }
+    .button{
+        font-size: 17px;
+        width: 280px;
+        &_left{
+            margin: 0 auto;
+            width: 240px;
+            margin-top: 40px;
+        }
+        
+    }
+    .about{
+        
+        &__wrapper{
+            width: 100%;
+        }
+        &__descr{
+            text-align: center;
+            font-size: 20px;
+        }
+        &__img{
+            display: none;
+        }
+    }
+    .advantages{
+        padding: 70px 0;
+        &__wrapper{
+            flex-direction: column;
+            align-items: center;
+            
+            
+        }
+        &__item{
+            width: 410px;
+            margin-top: 60px;
+            &:nth-last-child(3){
+                margin: 0;
+            }
+                       
+        }
+        &
+        &__item-title{
+            
+            font-size: 24px;
+            
+        }
+        &__descr{
+            
+            font-size: 16px;
+            
+        }
+    }
+    .cfo{
+        padding: 70px 0;
+        &__descr{
+            width: 540px;
+            font-size: 20px;
+        
+        }
+    }
 }
 
 @media (max-width: 576px){
     .container{
         max-width: 100%;
         padding: 0 10px;
+    }
+    .header{
+        &__logo{
+            display: block;
+            margin: 0 auto;
+            width: 200px;
+        }
+        &__links{
+            width: 100%;
+            flex-direction: column;
+        }
+        &__link{
+            font-size: 12px;
+            margin-bottom: 10px;
+            &:nth-last-child(1){
+                margin: 0;
+            }
+            
+        }
+    }
+    .promo{
+        min-height: 700px;
+        &__info{
+            margin-top: 140px;
+        }
+        &__title{
+            font-size: 20px;
+            line-height: 30px;
+        }
+        &__subtitle{
+            font-size: 20px;
+            
+        }
+        
+    }
+
+    .button{
+        margin-top: 60px;
+        font-size: 14px;
+        width: 200px;
+        height: 50px;
+        &_left{
+                
+            margin: 0 auto;
+            
+            margin-top: 40px;
+        }
+        
+    }
+    .about{
+        padding: 70px 0;
+        &__descr{
+            font-size: 15px;
+        }
+    }
+    .advantages{
+        &__item{
+            width: 250px;
+        }
+    }
+    .cfo{
+        min-height: auto;
+        &__title{
+            font-size: 20px;
+        }
+        &__descr{
+            font-size: 17px;
+            line-height: 30px;
+            width: 100%;
+        }
+    }
+    .footer{
+        &__info{
+            width: 220px;
+            line-height: 30px;
+        }
     }
 }
