--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -27,7 +27,7 @@
             text-align: center;  
             color: #FFFFFF;
             &:hover{
-                text-decoration: none;
+                text-decoration: underline;
                 color: #fff;
             }
         }
