--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -21,8 +21,8 @@
         color: #fff;
         text-decoration: none;
         &:hover{
-            text-decoration: none;
-            color: #fff;
+            text-decoration: underline;
+            color: #FF7BAB;
         }
         
     }
