--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,5 +26,6 @@
 @import 'blocks/advantages';
 @import 'blocks/cfo';
 @import 'blocks/footer';
+@import 'blocks/hamburger';
 
 @import 'base/media';
