--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -140,6 +140,7 @@
             justify-content: center;
             
             
+            
             background-color: rgba(0,0,0, .8);
             z-index: 2;
             transition: 0.6s all;
@@ -150,6 +151,8 @@
         
         &__link{
             margin-top: 50px;
+            width: 100%;
+            text-align: center;
         }
         &__logo{
             transform: translateY(10%);
