--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -86,6 +86,8 @@
         }
     }
     .advantages {
+        min-height: auto;
+        padding: 70px 0;
         &__item{
             width: 230px;
         }
@@ -99,6 +101,7 @@
         }
     }
     .cfo{
+        min-height: auto;
         
         &__descr{
             width: 732px;
@@ -112,9 +115,7 @@
     .promo{
         min-height: 950px;
     }
-    .advantages{
-        min-height: 800px;
-    }
+    
 
 
     
@@ -133,7 +134,7 @@
             position: fixed;
             top: 0;
             left: -100%;
-            width: 50%;
+            width: 100%;
             height: 100vh;
             padding: 20px 15px;
             flex-direction: column;
@@ -141,7 +142,7 @@
             
             
             
-            background-color: rgba(0,0,0, .8);
+            background-color: $section-color;
             z-index: 2;
             transition: 0.6s all;
             &_active{
@@ -152,6 +153,7 @@
         &__link{
             margin-top: 50px;
             width: 100%;
+            font-size: 20px;
             text-align: center;
         }
         &__logo{
